changes to portfolio

--- a/R_code/Arthur_Harnisch_Portfolio.Rmd
+++ b/R_code/Arthur_Harnisch_Portfolio.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ###Outline of R Code Function for Muscle Tension Analysis and Graphs
 
 Experiments are conducted as a repeated measure design. Treatment and control experiments were conducted as separate trials. Trials typically occur for 100 minutes, but may occur for more or less time depending on protocol and quality of 
-type Ia muscle spindle afferent firing. A python code, "python tension.py" was used to gather data at the relevant time points for peak tension (highest point of static stretch), minimum tension (lowest point of static stretch), baseline tension (10 sec beofre static stretch), and SR (average between 3.25-3.75 sec. of 4 sec static stretch) for every ramp (static stretch) throughout the experiment. The python out-put is .csv and the file name was saved as analyzed year, month, date, muscle number, and trial letter. Under the file directory in a folder entitled tension, four folders exist experiment, control, img, and experiment output.  Python.csv files were placed in experiment and control based on the type of trial, the image for the graph (point 6 below) placed in folder img entitled img (png file), and excel output will receive the excel output from the r codethat organizes baseline, peak, SR, and minimum tension values group for each trial on one sheet. The features of this r code are listed below.  
+type Ia muscle spindle afferent firing. A python code, "python tension.py" was used to gather data at the relevant time points for peak tension (highest point of static stretch), minimum tension (lowest point of static stretch), baseline tension (10 sec beofre static stretch), and SR (average between 3.25-3.75 sec. of 4 sec static stretch) for every ramp (static stretch) throughout the experiment. The python out-put is .csv and the file name was saved as analyzed year, month, date, muscle number, and trial letter. Under the file directory in a folder entitled tension, four folders exist experiment, control, img, and experiment output. Python.csv files were placed in experiment and control based on the type of trial, the image for the graph (point 6 below) placed in folder img entitled img (png file), and excel output will receive the excel output from the r code that organizes baseline, peak, SR, and minimum tension values group for each trial on one sheet. The features of this r code are listed below.  
 
 1. Imports multiple.csv files for both experiment and control and creates a data frame of all .csv files for each (Exp, and Control). The name of the file is used to organize the information within the data frame. 
 
@@ -32,15 +32,14 @@ Required packages: ggplot2, dplyr, splitstackshape, reshape, grid, png.
 
 
 ###Installing Packages
-this chunk lists packages that are required for the code to function. Some packages are listed as didn't use since they may be helpful if this code needs to be further developed. All of the items in this chunk are commented out so that the r markdown can knit.  
+this chunk lists packages that are required for the code to function. All of the items in this chunk are commented out so that the r markdown can knit.  
 ```{r packageInstall}
 # Packages necessary for this r code
 #sections are commented out so document can knit
 
 #ggplot2
 
-#install.packages("ggplot2") #this command is commented out untill it becomes necessary to use. 
-
+#install.packages("ggplot2") 
 
 
 #dplyr
@@ -79,7 +78,7 @@ A folder named Tension_R was created so that multiple .csv files could be placed
 #myfiles is a new data frame for all .csv files from Experiment folder 
 myfiles=dir("../Tension_R/Experiment", pattern = "*.csv$", all.files = TRUE, full.names = TRUE)
 
-#
+#for loop loops over myfiles
 
 for(i in 1: length(myfiles) ){
   
@@ -88,11 +87,14 @@ for(i in 1: length(myfiles) ){
   temp = read.csv(myfiles[i])
   fname = basename(myfiles[i])
   
+  #locates the year month day, muscle number, and trial number 
+  
   loc = regexpr(pattern = "[[:digit:]]+[-_][[:digit:]][[:alpha:]]", text = fname)
   trial = substr(fname, start = loc[[1]], stop = loc[[1]] + (attr(loc,'match.length')-1))
   trial = sub(pattern = '_','-', x= trial)
   
   temp2 = temp[-(which(temp$Ramp.. == '')),]
+  
   
   macroRows = which(temp2$Ramp.. == 'for macro #:')
   
@@ -282,7 +284,7 @@ Exp$ramp.num = Exp5$.id
 
 ###Percent variation from baseline of Control
 
-This is a code to find the percent variation from baseline of the files that were placed in the folder labeled Control 
+This is a code to find the percent change from baseline of the files that were placed in the folder labeled Control 
 
 
 ```{r dataManipulation_Control}
@@ -354,27 +356,6 @@ con3 = con1 %>%
 Control$ramp.num = Control5$.id
 
 
-
-
-#subsetting data frame to add categorical variable
-
-
-
-
-Macro_cat_var = levels = c('Macro 1 Ramp #1 46 sec', '#2 250-254 sec','#3 454-458 sec','#4 657-661 sec',"#5 861-865sec","#6 1065 - 1069 sec","Macro 2 Ramp #1 1115 sec", '#2 1319-1323 sec','#3 1523-1527 sec',' #4 1727-1731 sec','#5 1931- 1935 sec','#6 2135-2139 sec','Macro 3 Ramp #1 2185 sec','#2 2389-2393 sec','#3 2593-2597 sec','#4 2797 -2801 sec','#5 3001-3005 sec','#6 3205-3209 sec', 'Macro 4 Ramp #1 3255 sec','#2 3459-3463 sec','#3 3662-3667 sec','#4 3867-3871 sec','#5 4071-4075 sec.','#6 4275-4279 sec','Macro 5 Ramp #1 4325 sec','#2 4529-4533 sec','#3 4733-4737','#4 4937-4941 sec','#5 5141-5145 sec','#6 5345-5349 sec','Macro 6 Ramp #1 5395 sec','#2 5599-5603 sec','#3 5803-5807 sec','#4 6007-6011 sec.','#5 6211-6215 sec.','#6 6415-6419 sec','Macro 7 Ramp #1 6465 sec','#2 6669-6673 sec.','#3 6873-6877 sec.','#4 7077-7081 sec.','#5 7281-7285 sec.','#6 7485-7489 sec')
-
-
-
-Macro_cat_var = levels = c('1_1 46-50 sec', '1_2 250-254 sec','1_3 454-458 sec','1_4 657-661 sec',"1_5 861-865sec","1_6 1065 - 1069 sec","2_1 1115 sec", '2_2 1319-1323 sec','2_3 1523-1527 sec','2_4 1727-1731 sec','2_5 1931- 1935 sec','2_6 2135-2139 sec','3_1 2185-2189 sec','3_2 2389-2393 sec','3_3 2593-2597 sec','3_4 2797 -2801 sec','3_5 3001-3005 sec','3_6 3205-3209 sec', '4_1 3255-3259 sec','4_2 3459-3463 sec','4_3 3662-3667 sec','4_4 3867-3871 sec','4_5 4071-4075 sec.','4_6 4275-4279 sec','5_1 4325 sec','5_2 4529-4533 sec','5_3 4733-4737','5_4 4937-4941 sec','5_5 5141-5145 sec','5_6 5345-5349 sec','6_1 5395-5399 sec','6_2 5599-5603 sec','6_3 5803-5807 sec','6_4 6007-6011 sec.','6_5 6211-6215 sec.','6_6 6415-6419 sec','7_1 6465-6469 sec','7_2 6669-6673 sec.','7_3 6873-6877 sec.','7_4 7077-7081 sec.','7_5 7281-7285 sec.','7_6 7485-7489 sec')
-
-Macro_cat_var1 = as.data.frame(Macro_cat_var)
-Macro_cat_var1$id = 1:length(Macro_cat_var)
-
-#Exp$Macro_cat_var1 = Macro_cat_var1$Macro_cat_var[match(Exp$ramp.num, Macro_cat_var1$id)]
-
-# res = filter(Exp1, Macro == 1, Ramp.. <7)   #dplyr filter 
-
-
 ``` 
 ###Combination line plot
 
@@ -444,6 +425,18 @@ ggplot(Exp, aes(x=ramp.num, y=pvb.min, color = Trial))+
   scale_y_continuous("Percent change from baseline",labels = scales::percent, breaks = round(seq(min(Exp$pvb.min), max(Exp$pvb.min), by = 0.1),1))
 
 
+#baseline
+ggplot(Exp, aes(x= ramp.num, y= pvb.BL.tension, color = Trial)) +
+    geom_point()+
+  geom_line()+
+  geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+ 
+  ggtitle("Baseline Tension")+
+  theme(plot.title = element_text(hjust=0.5)) +
+  scale_x_continuous("Ramp number", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  scale_y_continuous("Percent change from baseline",labels = scales::percent, breaks = round(seq(min(Exp$pvb.BL.tension), max(Exp$pvb.BL.tension), by = 0.1),1)) 
+  
+
 #plot of graphs for control group
 
 
@@ -508,7 +501,7 @@ ggplot(Control, aes(x=ramp.num, y=pvb.min, color = Trial))+
 
 ### Multiple plot for multiple line plot
 
-Produces a multiplot for each combination line plot. Baseline tension, peak tension, average tension 3.25-3.27 of 4 sec. static stretch, and minimum tension) that shows the percent variation from baseline (first 20 minutes of experiment) over time of the experiment and contains a legend for the date of each trial. 
+Produces a multiplot for each combination line plot. Baseline tension, peak tension, average tension 3.25-3.75 of 4 sec. static stretch, and minimum tension) that shows the percent change from baseline (first 20 minutes of experiment) over time of the experiment and contains a legend for the date of each trial. 
 ```{r combinationLineplot, fig.height = 7, fig.width= 9}
 
 #combining the individual plots so they can be compared
@@ -577,7 +570,7 @@ a1 = ggplot(Exp, aes(x= ramp.num, y= pvb.BL.tension, color = Trial)) +
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+ 
   ggtitle("Baseline Tension")+
   theme(plot.title = element_text(hjust=0.5)) +
-  scale_x_continuous("Time(Min.)", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
+  scale_x_continuous("Ramp", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
   scale_y_continuous("Percent change from baseline",labels = scales::percent,  breaks = round(seq(min(Exp$pvb.BL.tension), max(Exp$pvb.BL.tension), by = 0.1),1))+
   theme(legend.position = "none")
@@ -591,7 +584,7 @@ b1 = ggplot(Exp, aes(x = ramp.num, y=pvb.peak.tension, color = Trial)) +
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+
   ggtitle("Peak Tension")+
 theme(plot.title = element_text(hjust=0.5))+
-  scale_x_continuous("Time(Min.)", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
+  scale_x_continuous("Ramp", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
   scale_y_continuous("Percent change from baseline", labels = scales::percent, breaks = round(seq(min(Exp$pvb.peak.tension), max(Exp$pvb.peak.tension), by = 1.2),1))+theme(legend.position = "none")
 
@@ -605,7 +598,7 @@ c1 = ggplot(Exp, aes(x=ramp.num, y=pvb.SR, color= Trial))+
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+
   ggtitle("SR") +
   theme(plot.title = element_text(hjust=0.5))+
-  scale_x_continuous("Time(Min.)",breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
+  scale_x_continuous("Ramp",breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
   scale_y_continuous("Percent change from baseline", labels = scales::percent, breaks = round(seq(min(Exp$pvb.SR), max(Exp$pvb.SR), by = 0.8),1))+theme(legend.position = "none")
 
@@ -618,7 +611,7 @@ d1 = ggplot(Exp, aes(x=ramp.num, y=pvb.min, color = Trial))+
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1)) +
   ggtitle("Minimum")+
   theme(plot.title = element_text(hjust=0.5))+
-   scale_x_continuous("Time(Min.)", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
+   scale_x_continuous("Ramp", breaks = round(seq(min(Exp$ramp.num), max(Exp$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
   scale_y_continuous("Percent change from baseline",labels = scales::percent, breaks = round(seq(min(Exp$pvb.min), max(Exp$pvb.min), by = 2),1))
 
@@ -637,9 +630,9 @@ a_2 = ggplot(Control, aes(x= ramp.num, y= pvb.BL.tension, color = Trial)) +
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+
   ggtitle("Control Baseline Tension")+
   theme(plot.title = element_text(hjust=0.5))+scale_x_continuous("Time(Min.)")+
-   scale_x_continuous("Time(Min.)", breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
+   scale_x_continuous("Ramp", breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
-  scale_y_continuous("Percent varation from baseline", labels = scales::percent, breaks = round(seq(min(Control$pvb.BL.tension), max(Control$pvb.BL.tension), by = 0.1),1)) +theme(legend.position = "none")
+  scale_y_continuous("Percent change from baseline", labels = scales::percent, breaks = round(seq(min(Control$pvb.BL.tension), max(Control$pvb.BL.tension), by = 0.1),1)) +theme(legend.position = "none")
 
 
 #plot of peak tension
@@ -650,9 +643,9 @@ b_2 = ggplot(Control, aes(x = ramp.num, y=pvb.peak.tension, color = Trial))+
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+
 ggtitle("Control Peak Tension")+
   theme(plot.title = element_text(hjust=0.5))+
-  scale_x_continuous("Time(Min.)", breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
+  scale_x_continuous("Ramp", breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
-  scale_y_continuous("Percent varation from baseline",labels = scales::percent, breaks = round(seq(min(Control$pvb.peak.tension), max(Control$pvb.peak.tension), by = 1.2),1)) +theme(legend.position = "none")
+  scale_y_continuous("Percent change from baseline",labels = scales::percent, breaks = round(seq(min(Control$pvb.peak.tension), max(Control$pvb.peak.tension), by = 1.2),1)) +theme(legend.position = "none")
 
 
 
@@ -664,9 +657,9 @@ c_2 = ggplot(Control, aes(x=ramp.num, y=pvb.SR, color= Trial))+
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1)) +
   ggtitle("Control SR")+
   theme(plot.title = element_text(hjust=0.5))+
-  scale_x_continuous("Time(Min.)",breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
+  scale_x_continuous("Ramp",breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
-  scale_y_continuous("Percent varation from baseline",labels = scales::percent, breaks = round(seq(min(Control$pvb.SR), max(Control$pvb.SR), by = 0.8),1))+theme(legend.position = "none")
+  scale_y_continuous("Percent change from baseline",labels = scales::percent, breaks = round(seq(min(Control$pvb.SR), max(Control$pvb.SR), by = 0.8),1))+theme(legend.position = "none")
 
 #plot of min tension
 
@@ -676,9 +669,9 @@ d_2 = ggplot(Control, aes(x=ramp.num, y=pvb.min, color = Trial))+
   geom_smooth(method ="lm", se=FALSE, color = "black", aes (group = 1))+
   ggtitle("Control Minimum")+
   theme(plot.title = element_text(hjust=0.5))+
-  scale_x_continuous("Time(Min.)", breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
+  scale_x_continuous("Ramp", breaks = round(seq(min(Control$ramp.num), max(Control$ramp.num), by=2),1))+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))+
-  scale_y_continuous("Percent varation from baseline",labels = scales::percent, breaks = round(seq(min(Control$pvb.min), max(Control$pvb.min), by = 2),1))
+  scale_y_continuous("Percent change from baseline",labels = scales::percent, breaks = round(seq(min(Control$pvb.min), max(Control$pvb.min), by = 2),1))
 
 
 
@@ -771,12 +764,10 @@ library(ggplot2)
     geom_point()+
        ggtitle("Average SR versus Time for Treatment Group\n")+
   theme(plot.title = element_text(hjust=0.5))+
-  labs(x="Time\n", y = "Average SR\n")+
+  labs(x="Macro\n", y = "Average SR\n")+
         scale_x_continuous(breaks = round(seq(min(Exp8$Macro), max(Exp8$Macro), by=1),1))+
   theme(axis.text.x = element_text(angle = 0, hjust = 1))
      
-     
-   
      
 #plot of control group 
      
@@ -787,10 +778,13 @@ library(ggplot2)
     geom_point()+
        ggtitle("Average SR versus Time for Control Group\n")+
   theme(plot.title = element_text(hjust=0.5))+
-  labs(x="Time\n", y = "Average SR\n")+
+  labs(x="Macro\n", y = "Average SR\n")+
         scale_x_continuous(breaks = round(seq(min(Con8$Macro), max(Con8$Macro), by=1),1))+
-  theme(axis.text.x = element_text(angle = 0, hjust = 1))
-     
+  theme(axis.text.x = element_text(angle = 0, hjust = 1))   
+   
+   
+   
+   
 # side by side plot of control and treatment 
    
     z1= ggplot(Exp8,aes(x=Macro, y=avg.all.macro, colour= type)) + 
@@ -811,7 +805,7 @@ library(ggplot2)
     geom_point()+
    ggtitle("Average SR versus Time for Treatment and Control\n")+
       theme(plot.title = element_text(hjust=0.5))+
-   scale_x_continuous("Time(Min.)", breaks = round(seq(min(Con8$Macro), max(Con8$Macro), by=1),1))+
+   scale_x_continuous("Macro", breaks = round(seq(min(Con8$Macro), max(Con8$Macro), by=1),1))+
   theme(axis.text.x = element_text(angle = 0, hjust = 1))
      # +theme(axis.title.x=element_blank(),
      #   axis.text.x=element_blank(),
@@ -828,7 +822,7 @@ ggplot(Exp_Con, aes(x=Macro, y=avg.all.macro, colour= type)) +
     geom_point()+
     ggtitle("Average SR versus Time for Treatment and Control\n")+
  theme(plot.title = element_text(hjust=0.5))+
- labs(x="Time\n", y = "Average SR\n")+
+ labs(x="Macro\n", y = "Average SR\n")+
      scale_x_continuous("Time(Min.)", breaks = round(seq(min(Exp_Con$Macro), max(Exp_Con$Macro), by=1),1))+
   theme(axis.text.x = element_text(angle = 0, hjust = 1))
 
@@ -846,7 +840,7 @@ ggplot(Exp_Con, aes(x=Macro, y=avg.all.macro, group = type, color = type))+
   theme(plot.title = element_text(hjust=0.5))+
 #theme(legend.position = "none")#+   #uncomment if you want to remove legend
 #expand_limits(y=0)#+   #if you want to change the limits of the y-axis, uncomment and set the scale for y axis
-labs(x="Time\n", y = "Average SR\n")+
+labs(x="Macro\n", y = "Average SR\n")+
      scale_x_continuous(breaks = round(seq(min(Exp_Con$Macro), max(Exp_Con$Macro), by=1),1))+
   theme(axis.text.x = element_text(angle = 0, hjust = 1))
  
@@ -860,7 +854,7 @@ labs(x="Time\n", y = "Average SR\n")+
 
 ###Dot plots with mean and error bars
 
-Produces graphs of dot plots with error bars of the average SR (3.25-3.75 of static stretch) per 20 minutes of the experiment for every trial. Graphs are produced independently for treatment and control, a multiplot that shows treatment and control, and a single graph that shows treatment and control.    
+Produces multiple dot plots with error bars. Points represent the average value of SR (3.25-3.75 of static stretch) across all trails per macro. Different graphs are produced for experiment and control, as well Experiment and Control side by side, and on the same graph.  
 
 
 ```{r dotPlot, fig.height = 7, fig.width= 8}
@@ -999,7 +993,7 @@ ggplot(Exp_Con11, aes(x=Exp_Con11$type, y=avg.all.macro, group = num.type, color
 
 Produces a line plot of peak tension as a percent variation from baseline tension over time of experiment. This graph also includes a picture of the afferent firing caused by the first static stretch. The caption of this graph lists the standard deviation values for each 20-minute period of the experiment. 
 
-```{r lineDatavisualization, fig.height = 7, fig.width= 8}
+```{r lineDatavisualization, fig.height = 8, fig.width= 10}
 
 library(dplyr)
 library(png)
@@ -1085,7 +1079,8 @@ g <- rasterGrob(img, interpolate=TRUE, height = 1, width = 1) #chnage height and
 
 ###Table Output
 
-outputs a table for 10 sec. before static stretch (baseline tension), peak tension, average tension 3.25-3.27 of 4 sec. static stretch, and minimum tension in an excel (xlsx) format of transposed values with calculated average for each of the 20 minute periods. 
+outputs a table for 10 sec. before static stretch (baseline tension), peak tension, average tension 3.25-3.75 of 4 sec. static stretch, and minimum in an excel sheet printed to a folder ..Tension_R\\Exp_output. Each row in the table are values found for each ramp within a macro (6 ramps in a macro). The columns organize the macro values and group them by trial and type of analysis (baseline, peak, SR, and minimum) and calculated average for each row, 
+
 
 ```{r tableOutput}
 
@@ -1165,18 +1160,17 @@ for(i in 1:nrow(Exp_25)){
 Exp_26 = temp
  
 
+#adding a column to Exp_26 that calculates the average calue for each row of numeric variables
+
+
+Exp_26$Average = apply(Exp_26[1:6], 1 , mean)
+
+
+
 #write dataframe to excel sheet
 
-write.xlsx(Exp_25, file = "C:\\Users\\Arthur\\255E\\Tension_R\\Exp_output\\Exp_out.xlsx", sheetName="Sheet1")
+write.xlsx(Exp_26, file = "C:\\Users\\Arthur\\255E\\Tension_R\\Exp_output\\Exp_out.xlsx", sheetName="Sheet1")
 
-
-
-
-#data frame manipulation
-
-#install.packages("htmlTable")
-
-#library(htmlTable)
 
 
 ```
