--- a/Neural_R/R_Code/Neural_R.Rmd
+++ b/Neural_R/R_Code/Neural_R.Rmd
@@ -1308,9 +1308,11 @@ Exp_17$sqrt = sqrt(Exp_17$n)
 Exp_17$SE = Exp_17$SD / Exp_17$sqrt
 Exp_17$ymin = Exp_17$avg - Exp_17$SE
 Exp_17$ymax = Exp_17$avg + Exp_17$SE
-Exp_17$type = "Drug"
+Exp_17$type = "50 Hz Drug"
 
-
+Exp_17$num.type = 1
+Exp_17$min1 = mean(Exp_17$ymin)
+Exp_17$max1 = mean(Exp_17$ymax)
 
 #Experimental group 100 hz subsetting and calculations of mean, standard deviation, and standard error
 Exp_14 = Exp%>%
@@ -1329,149 +1331,85 @@ Exp_14$sqrt = sqrt(Exp_14$n)
 Exp_14$SE = Exp_14$SD / Exp_14$sqrt
 Exp_14$ymin = Exp_14$avg - Exp_14$SE
 Exp_14$ymax = Exp_14$avg + Exp_14$SE
-Exp_14$type = "Drug"
+Exp_14$type = "100 Hz Drug"
 
-
+Exp_14$num.type = 1.1
+Exp_14$min1 = mean(Exp_14$ymin)
+Exp_14$max1 = mean(Exp_14$ymax)
 #Control group 50 hz subsetting and calculations of mean, standard deviation, and standard error
 
  
- Con18 = Control %>%
+ Con_19 = Control %>%
   group_by(Macro)%>%
   summarise(avg = mean(pcb.50hz, na.rm = TRUE))
 
- Con18_sd = Control%>%
+ Con_20 = Control%>%
   group_by(Macro)%>%
-  summarise(sd = sd(FST, na.rm = TRUE))
+  summarise(sd = sd(pcb.50hz, na.rm = TRUE))
 
+Con_21 = as.data.frame(table(Control$Macro))
+Con_19$SD = Con_20$SD
+Con_19$n = as.numeric(Con_21$Freq)
+Con_19$sqrt = sqrt(Con_19$n)
+Con_19$SE = Con_19$SD / Con_19$sqrt
+Con_19$ymin = Con_19$avg - Con_19$SE
+Con_19$ymax = Con_19$avg + Con_19$SE
+Con_19$type = "50 Hz Control"
+ 
+Exp_19$num.type = 1.2
+Exp_19$min1 = mean(Exp_19$ymin)
+Exp_19$max1 = mean(Exp_19$ymax)
+ 
+#Control group 100 Hz subsetting and calculations of mean, standard deviation, and standard error 
 
  
- 
- 
-  Con18$sd = Con8_sd$sd
- 
- 
-Con10 = as.data.frame(table(Control$Macro))
-   Con9 =  sqrt(Con10$Freq)
-   Con8$SE = Con8$sd / Con9
-
-   Con8$ymin = Con8$avg.all.macro - Con8$SE
-   Con8$ymax = Con8$avg.all.macro + Con8$SE
-   
-    Con8$type = "Control"
-
-
-
-
-
-
-
-
-#groups the ramp number and takes the average of all SR values for both experiment and control
-
-#experimnet group calculations
-
-#experiment subset and calculation of mean, standard deviation, and standard error. 
-
-library(dplyr)
-
-
-Exp8 = Exp %>%
+ Con_22 = Control %>%
   group_by(Macro)%>%
-  summarise(avg.all.macro = mean(FST, na.rm = TRUE))
+  summarise(avg = mean(pcb.100hz, na.rm = TRUE))
 
-
- Exp8_sd = Exp%>%
+ Con_23 = Control%>%
   group_by(Macro)%>%
-  summarise(sd = sd(FST, na.rm = TRUE))
+  summarise(sd = sd(pcb.100hz, na.rm = TRUE))
 
- Exp8$sd = Exp8_sd$sd
- 
-Exp10 = as.data.frame(table(Exp$Macro))
-  Exp9 =  sqrt(Exp10$Freq)
- Exp8$SE = Exp8$sd / Exp9
+Con_24 = as.data.frame(table(Control$Macro))
+ Con_22$SD = Con_23$SD
+ Con_22$n = as.numeric(Con_24$Freq)
+ Con_22$sqrt = sqrt(Con_22$n)
+ Con_22$SE = Con_20$SD / Con_20$sqrt
+ Con_22$ymin = Con_22$avg - Con_22$SE
+ Con_22$ymax = Con_22$avg + Con_22$SE
+ Con_22$type = "50 Hz Control"
 
- Exp8$ymin = Exp8$avg.all.macro - Exp8$SE
- Exp8$ymax = Exp8$avg.all.macro + Exp8$SE
- 
- Exp8$type = "Drug"
- 
-#control subset and calculation of mean, standard deviation, and standard error.  
- 
- Con8 = Control %>%
-  group_by(Macro)%>%
-  summarise(avg.all.macro = mean(FST, na.rm = TRUE))
+ Exp_22$num.type = 1.3
+Exp_22$min1 = mean(Exp_22$ymin)
+Exp_22$max1 = mean(Exp_22$ymax)
 
- Con8_sd = Control%>%
-  group_by(Macro)%>%
-  summarise(sd = sd(FST, na.rm = TRUE))
-
- Con8$sd = Con8_sd$sd
- 
- 
-Con10 = as.data.frame(table(Control$Macro))
-   Con9 =  sqrt(Con10$Freq)
-   Con8$SE = Con8$sd / Con9
-
-   Con8$ymin = Con8$avg.all.macro - Con8$SE
-   Con8$ymax = Con8$avg.all.macro + Con8$SE
-   
-    Con8$type = "Control"
- 
- 
-    
-    #binds data frame to compare treatment and control in plot
-     Exp_Con = rbind(Exp8, Con8)
+#binds data frame to compare treatment and control in plot
+     Exp_Con12 = rbind(Exp_17,Exp_14, Con_19, Con_22)
  
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#plot of average for macro FST per macro scatter plot with errorbars Experiment 
-
-
-
+     
 library(ggplot2)
+     
+     
+#plot of percent chnage from baseline for Experiment 50 hz scatter plot with errorbars Experiment 
 
-Exp8$num.type = 1
-Exp8$min1 = mean(Exp8$ymin)
-Exp8$max1 = mean(Exp8$ymax)
-
-
-   ggplot(Exp8,aes(x=num.type, y=avg.all.macro, group = type, color = Macro)) + 
+   ggplot(Exp_17,aes(x=num.type, y=pcb.50hz, group = type, color = Macro)) + 
    geom_errorbar(aes(ymin=min1 , ymax=max1), width= 20) +
    geom_point()+
      geom_jitter()+
-     ggtitle("Average SR for Treatment Group\n")+
+     ggtitle("50 Hz Vibrations\n")+
   theme(plot.title = element_text(hjust=0.5))+
-  labs(x="Drug\n", y = "Average SR\n")+
+  labs(x="Drug\n", y = "Percent Change from Baseline\n")+
          theme(axis.text.x=element_blank(),
         axis.ticks.x=element_blank())
         
    
    
-
-   
 #plot of average for macro Bl.Tension per macro scatterplot with errorbars Control    
 
-   Con8$num.type = 1.1
 
-Con8$min1 = mean(Con8$ymin)
-Con8$max1 = mean(Con8$ymax)
-
-
-   ggplot(Con8,aes(x=num.type, y=avg.all.macro, group = type, color = Macro)) + 
+   ggplot(Exp_14,aes(x=num.type, y=avg.all.macro, group = type, color = Macro)) + 
    geom_errorbar(aes(ymin=min1 , ymax=max1), width= 20) +
    geom_point()+
      geom_jitter()+
